namespace Library;

public interface ElementoMapa
{
    
}